# FastApi-specs

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: auth_bearer.py  auth_handler.py  datastore.py
app/routes/: models.py  views.py
app/utils/: redis_helper.py
